--- a/options.conf
+++ b/options.conf
@@ -28,9 +28,11 @@ optimize_size = false
 # set profile for pgo
 pgo = false
 # set flags for security-sensitive builds
-security_sensitive = false
+security_sensitive = true
 # do not run test suite
 skip_tests = false
+# add .so files to the lib package instead of dev
+so_to_lib = false
 # configure build for avx2
 use_avx2 = false
 # add clang flags
