--- a/options.conf
+++ b/options.conf
@@ -17,12 +17,14 @@ autoupdate = false
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# this package is a library compatability package and only ships versioned library files
+compat = false
 # set conservative build flags
 conservative_flags = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
-funroll-loops = false
+funroll-loops = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
@@ -42,7 +44,9 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
+# configure build for avx512
+use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
