--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libarchive
-url = https://github.com/libarchive/libarchive/releases/download/v3.4.0/libarchive-3.4.0.tar.gz
+url = https://github.com/libarchive/libarchive/releases/download/v3.4.1/libarchive-3.4.1.tar.xz
 archives = 
 giturl = https://github.com/libarchive/libarchive.git
 domain = 
