libarchive: Autospec creation for update from version v3.4.2 to version 3.4.3
Adam Korczynski (3):
      Added seed corpus
      Moved the corpus file to the contrib dir
      Moved oss-fuzz files from oss-fuzz to Libarchives repository

Christos Zoulas (2):
      Add missing breaks
      Make variable const since it is assigned from a string literal

David Capello (4):
      Create libarchive.pc inside the cmake build dir
      Don't even try HAVE_LZMA_STREAM_ENCODER_MT if ENABLE_LZMA is disabled
      Disable error using deprecated functions on macOS 10.15 to calculate MD5
      Use /w1nnnn instead of /wennnn to enable warnings on MSVC Debug mode

Emil Velikov (4):
      Remove #ifdef chain in __archive_digest init
      Change __archive_create_child() signature
      Call OpenProcess() from within __archive_create_child()
      Remove CloseHandle() from __archive_write_program_free

Eric Yu (1):
      Remove unreachable code in RAR reader

Harry Mallon (4):
      zstd: Use --no-check with binary to match library default
      zstd: Fix support for compression-level>=20 when using binary
      zstd: Support negative compression-levels
      zstd: Improve version checking

Johannes 'josch' Schauer (1):
      libarchive/archive_entry_stat.3: typo nlinks -> nlink

Kamil Rytarowski (1):
      archive_read.c: silence UBSan warning about undefined behavior

Martin Matuska (22):
      Libarchive 3.4.3dev
      Constify name in __archive_write_entry_filetype_unsupported()
      CI: add external binary static xz to Windows build
      Add testcase for ZIPX files with LZMA_STREAM_END marker
      Solve warning by excluding more code to _WIN32 in file_open()
      XAR writer: initialize size with 0 in xar_write_data()
      CI: various adjustments
      CI: use static CMake build of liblzma
      XAR reader: initialize file_queue with 0 and memcpy() if allocated only
      bsdcpio_test: from_hex() needs to be an uint32_t
      CI: GitHub Actions: use C:\windows\system32\tar.

--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = libarchive
-url = https://github.com/libarchive/libarchive/releases/download/v3.4.2/libarchive-3.4.2.tar.xz
+url = https://github.com/libarchive/libarchive/releases/download/v3.4.3/libarchive-3.4.3.tar.xz
 archives = 
 giturl = https://github.com/libarchive/libarchive.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
