Build static dev

--- a/options.conf
+++ b/options.conf
@@ -40,7 +40,7 @@ funroll-loops = true
 # set flags to smallest -02 flags possible
 insecure_build = false
 # do not remove static libraries
-keepstatic = false
+keepstatic = true
 # do not require autostart subpackage
 no_autostart = false
 # do not use the replacement pattern for file matching
